# polkadot_api_cpp

./: .clang-format  .doxygen.conf  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  ca-chain.cert.pem  config_example.json  config_kusama.json  install_manifest.txt
doc/: demo_milestone1.md  demo_milestone2.md  demo_milestone3.md  demos.md  raspberrypi.md
doc/html/: address_8cpp_source.html  address_8h_source.html  annotated.html  application_8cpp_source.html  application_8h_source.html  balance_8h_source.html  blockhash_8h_source.html  classAddressUtils.html  classApplicationException.html  classApplicationException__inherit__graph.map  classApplicationException__inherit__graph.md5  classBalance.html  classCConfig.html  classCConstants.html  classCJsonRpc.html  classCJsonRpc__coll__graph.md5  classCJsonRpc__inherit__graph.map  classCPolkaApi.html  classCPolkaApi__coll__graph.map  classCPolkaApi__coll__graph.md5  classCPolkaApi__inherit__graph.map  classCPolkaApi__inherit__graph.md5  classCWebSocketClient.html  classCWebSocketClient__coll__graph.map  classCWebSocketClient__coll__graph.md5  classEasyLogger.html  classEasyLogger__coll__graph.md5  classEasyLogger__inherit__graph.map  classIApplication.html  classIApplication__inherit__graph.map  classIApplication__inherit__graph.md5  classIJsonRpc.html  classIJsonRpc__inherit__graph.map  classIJsonRpc__inherit__graph.md5  classILogger.html  classILogger__inherit__graph.map  classILogger__inherit__graph.md5  classIMessageObserver.html  classIMessageObserver__inherit__graph.map  classIMessageObserver__inherit__graph.md5  (+449 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
doc/ports/: linuses.md  macos.md  windows.md
examples/: connect.cpp  polkaclient.cpp
src/: application.cpp  application.h  config.cpp  config.h  constants.cpp  constants.h  easywsclient.cpp  elog.cpp  elog.h  errors.h  jsonrpc.cpp  jsonrpc.h  loggerstub.cpp  loggerstub.h  metadatafactory.cpp  metadatafactory.h  polkacpp.cpp  polkacpp.h  polkadot.cpp  polkadot.h  polkawin.cpp  polkawin.h  scale.cpp  scale.h  types.h  wsclient.cpp  wsclient.h
src/interfaces/: iapplication.h  ijsonrpc.h  ilogger.h  imessageobserver.h  iwsclient.h  iwsmessageobserver.h
src/libs/blake/: README.md  blake2b.cpp
src/libs/int128/: config.h  int128.cpp  int128.h  macros.h  optimization.h  port.h
src/libs/scale/: scale.cpp  scale.h
src/libs/xxhash/: xxhash.cpp  xxhash.h
src/structs/: ResponseBase.h  SystemPeers.h  balance.h  blockhash.h  common.h  extrinsic.h  hasher.h  metadata.h  metadataV0.h  metadataV4.h  metadataV5.h  metadataV6.h  metadataV7.cpp  metadataV7.h  publickey.h  responsebase.h  runtimeversion.h  signaturepayload.h  signedblock.h  storageItem.h  systeminfo.h  transfer.h
src/structs/chain/: BlockHash.h  RuntimeVersion.h
src/structs/state/: Metadata.h
src/structs/system/: SystemInfo.h
src/utils/: address.cpp  address.h  concurrentmapqueue.h  converters.cpp  converters.h  sr25519.h  storage.cpp  storage.h
test/: compact_int_ok.cpp  concurrentmapqueue_ok.cpp  connect.cpp  connectApp.cpp  connectJson.cpp  connect_failed_tls.cpp  decode_public_key.cpp  encode_public_key.cpp  format_transaction_ok.cpp  get_block_ok.cpp  get_blockfinalhead_ok.cpp  get_blockhash_ok.cpp  get_child_storage.cpp  get_keys.cpp  get_metadata.cpp  get_metadatav0_ok.cpp  get_metadatav5_ok.cpp  get_metadatav6_ok.cpp  get_metadatav7_ok.cpp  get_pending_extrinsics.cpp  get_runtimeversion_miss.cpp  get_runtimeversion_ok.cpp  get_storage.cpp  get_storage_hash.cpp  get_storage_size.cpp  get_system_networkstate_ok.cpp  get_systemhealth_ok.cpp  get_systeminfo_ok.cpp  get_systempeers_ok.cpp  main.cpp  my_test.cpp  query_storage.cpp  remove_extrinsic.cpp  sign_message.cpp  storage_key_blake2.cpp  storage_key_xxhash.cpp  submit_extrinsic.cpp  submit_extrinsicNWatch.cpp  transfer.cpp  wsclient_instantiate.cpp  (+8 more)
test/helpers/: cli.h  mockjsonrpc.h
test/metadata/: exampleMetadataV0.txt  exampleMetadataV5.txt  exampleMetadataV6.txt  exampleMetadataV7.txt
